language/bison.output
Terminals which are not used

   TOKEN_ARRAY


Grammar

    0 $accept: program $end

    1 program: global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions

    2 global_variables: /* empty */
    3                 | global_variables local_variables

    4 local_variables: simple_type names TOKEN_SEMICOLON
    5                | complex_type names TOKEN_SEMICOLON

    6 simple_type: TOKEN_VAR_REAL
    7            | TOKEN_VAR_INT
    8            | TOKEN_LOCATION
    9            | TOKEN_OBJECT

   10 complex_type: simple_type ranges
   11             | complex_type simple_type ranges

   12 ranges: TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   13       | ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

   14 names: TOKEN_IDENTIFIER
   15      | TOKEN_IDENTIFIER TOKEN_ASSIGN number
   16      | names TOKEN_COMMA TOKEN_IDENTIFIER
   17      | names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   18      | names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

   19 values: number
   20       | TOKEN_IDENTIFIER
   21       | values TOKEN_COMMA TOKEN_IDENTIFIER
   22       | values TOKEN_COMMA number

   23 declare_functions: /* empty */
   24                  | declare_function_

   25 function_header: TOKEN_FUNCTION TOKEN_IDENTIFIER

   26 declare_function_: function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   27                  | declare_function_ function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   28                  | function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions
   29                  | declare_function_ function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

   30 number: TOKEN_OPER_SIGNADD TOKEN_REAL
   31       | TOKEN_OPER_SIGNADD TOKEN_UINT
   32       | TOKEN_REAL
   33       | TOKEN_UINT

   34 block_of_instructions: TOKEN_BEGIN TOKEN_END
   35                      | TOKEN_BEGIN TOKEN_SEMICOLON TOKEN_END
   36                      | TOKEN_BEGIN commands TOKEN_END

   37 commands: matched
   38         | commands matched
   39         | unmatched
   40         | commands unmatched

   41 command: TOKEN_FOR TOKEN_LPAR init TOKEN_SEMICOLON expression_bool TOKEN_SEMICOLON simple_command TOKEN_RPAR block_of_instructions
   42        | TOKEN_DO block_of_instructions TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR TOKEN_SEMICOLON
   43        | TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   44        | TOKEN_RETURN expression TOKEN_SEMICOLON
   45        | TOKEN_RETURN TOKEN_SEMICOLON
   46        | TOKEN_BREAK TOKEN_SEMICOLON
   47        | local_variables
   48        | simple_command TOKEN_SEMICOLON

   49 simple_command: assign
   50               | variable TOKEN_PLUSPLUS
   51               | variable TOKEN_MINUSMINUS
   52               | variable

   53 assign: variable_left TOKEN_ASSIGN variable
   54       | variable_left TOKEN_ASSIGN number

   55 variable_left: TOKEN_IDENTIFIER
   56              | TOKEN_IDENTIFIER array_access

   57 call_fce: TOKEN_IDENTIFIER TOKEN_LPAR call_parameters TOKEN_RPAR

   58 call_parameters: expression
   59                | /* empty */
   60                | call_parameters TOKEN_COMMA expression

   61 matched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE matched
   62        | command
   63        | block_of_instructions

   64 unmatched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   65          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR command
   66          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE unmatched

   67 init: TOKEN_VAR_INT TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   68     | TOKEN_VAR_REAL TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   69     | TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   70     | TOKEN_IDENTIFIER TOKEN_LSBRA expression TOKEN_RSBRA TOKEN_ASSIGN expression

   71 variable: TOKEN_IDENTIFIER
   72         | TOKEN_IDENTIFIER array_access
   73         | call_fce
   74         | variable TOKEN_DOT TOKEN_IDENTIFIER
   75         | variable TOKEN_DOT call_fce

   76 array_access: TOKEN_LSBRA exps TOKEN_RSBRA
   77             | array_access TOKEN_LSBRA exps TOKEN_RSBRA

   78 exps: expression
   79     | exps TOKEN_COMMA expression

   80 expression_base: variable
   81                | number
   82                | variable TOKEN_MINUSMINUS
   83                | variable TOKEN_PLUSPLUS
   84                | TOKEN_LPAR expression TOKEN_RPAR

   85 expression_mul: expression_base
   86               | expression_mul TOKEN_OPER_MUL expression_base

   87 expression_add: expression_mul
   88               | expression_add TOKEN_OPER_SIGNADD expression_mul

   89 expression: expression_add

   90 expression_bool_base: expression
   91                     | expression TOKEN_OPER_REL expression

   92 expression_bool_or: expression_bool_base
   93                   | expression_bool_or TOKEN_BOOL_OR TOKEN_LPAR expression_bool TOKEN_RPAR

   94 expression_bool: expression_bool_or
   95                | expression_bool TOKEN_BOOL_AND expression_bool_or


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_MAIN (258) 1
TOKEN_LOCATION (259) 8
TOKEN_OBJECT (260) 9
TOKEN_VAR_REAL (261) 6 68
TOKEN_VAR_INT (262) 7 67
TOKEN_FUNCTION (263) 25
TOKEN_ARRAY (264)
TOKEN_IF (265) 61 64 65 66
TOKEN_ELSE (266) 61 66
TOKEN_WHILE (267) 42 43
TOKEN_DO (268) 42
TOKEN_FOR (269) 41
TOKEN_BOOL_AND (270) 95
TOKEN_BOOL_OR (271) 93
TOKEN_RETURN (272) 44 45
TOKEN_BREAK (273) 46
TOKEN_SEMICOLON (274) 4 5 35 41 42 44 45 46 48
TOKEN_DOT (275) 74 75
TOKEN_COMMA (276) 16 17 18 21 22 60 79
TOKEN_LPAR (277) 1 26 27 28 29 41 42 43 57 61 64 65 66 84 93
TOKEN_RPAR (278) 1 26 27 28 29 41 42 43 57 61 64 65 66 84 93
TOKEN_LSBRA (279) 12 13 70 76 77
TOKEN_RSBRA (280) 12 13 70 76 77
TOKEN_ASSIGN (281) 15 17 18 53 54 67 68 69 70
TOKEN_BEGIN (282) 18 34 35 36
TOKEN_END (283) 18 34 35 36
TOKEN_IDENTIFIER (284) 14 15 16 17 18 20 21 25 55 56 57 67 68 69 70
    71 72 74
TOKEN_UINT (285) 12 13 31 33
TOKEN_REAL (286) 30 32
TOKEN_OPER_REL (287) 91
TOKEN_OPER_SIGNADD (288) 30 31 88
TOKEN_OPER_MUL (289) 86
TOKEN_PLUSPLUS (290) 50 83
TOKEN_MINUSMINUS (291) 51 82


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
global_variables (39)
    on left: 2 3, on right: 1 3
local_variables (40)
    on left: 4 5, on right: 3 47
simple_type (41)
    on left: 6 7 8 9, on right: 4 10 11
complex_type (42)
    on left: 10 11, on right: 5 11
ranges (43)
    on left: 12 13, on right: 10 11 13
names (44)
    on left: 14 15 16 17 18, on right: 4 5 16 17 18 26 27
values (45)
    on left: 19 20 21 22, on right: 18 21 22
declare_functions (46)
    on left: 23 24, on right: 1
function_header (47)
    on left: 25, on right: 26 27 28 29
declare_function_ (48)
    on left: 26 27 28 29, on right: 24 27 29
number (49)
    on left: 30 31 32 33, on right: 15 17 19 22 54 81
block_of_instructions (50)
    on left: 34 35 36, on right: 1 26 27 28 29 41 42 43 63 64
commands (51)
    on left: 37 38 39 40, on right: 36 38 40
command (52)
    on left: 41 42 43 44 45 46 47 48, on right: 62 65
simple_command (53)
    on left: 49 50 51 52, on right: 41 48
assign (54)
    on left: 53 54, on right: 49
variable_left (55)
    on left: 55 56, on right: 53 54
call_fce (56)
    on left: 57, on right: 73 75
call_parameters (57)
    on left: 58 59 60, on right: 57 60
matched (58)
    on left: 61 62 63, on right: 37 38 61 66
unmatched (59)
    on left: 64 65 66, on right: 39 40 66
init (60)
    on left: 67 68 69 70, on right: 41
variable (61)
    on left: 71 72 73 74 75, on right: 50 51 52 53 74 75 80 82 83
array_access (62)
    on left: 76 77, on right: 56 72 77
exps (63)
    on left: 78 79, on right: 76 77 79
expression_base (64)
    on left: 80 81 82 83 84, on right: 85 86
expression_mul (65)
    on left: 85 86, on right: 86 87 88
expression_add (66)
    on left: 87 88, on right: 88 89
expression (67)
    on left: 89, on right: 44 58 60 67 68 69 70 78 79 84 90 91
expression_bool_base (68)
    on left: 90 91, on right: 92
expression_bool_or (69)
    on left: 92 93, on right: 93 94 95
expression_bool (70)
    on left: 94 95, on right: 41 42 43 61 64 65 66 93 95


state 0

    0 $accept: . program $end
    1 program: . global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions
    2 global_variables: .
    3                 | . global_variables local_variables

    $default  reduce using rule 2 (global_variables)

    program           go to state 1
    global_variables  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: global_variables . declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions
    3 global_variables: global_variables . local_variables
    4 local_variables: . simple_type names TOKEN_SEMICOLON
    5                | . complex_type names TOKEN_SEMICOLON
    6 simple_type: . TOKEN_VAR_REAL
    7            | . TOKEN_VAR_INT
    8            | . TOKEN_LOCATION
    9            | . TOKEN_OBJECT
   10 complex_type: . simple_type ranges
   11             | . complex_type simple_type ranges
   23 declare_functions: .  [TOKEN_MAIN]
   24                  | . declare_function_
   25 function_header: . TOKEN_FUNCTION TOKEN_IDENTIFIER
   26 declare_function_: . function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   27                  | . declare_function_ function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   28                  | . function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions
   29                  | . declare_function_ function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LOCATION  shift, and go to state 4
    TOKEN_OBJECT    shift, and go to state 5
    TOKEN_VAR_REAL  shift, and go to state 6
    TOKEN_VAR_INT   shift, and go to state 7
    TOKEN_FUNCTION  shift, and go to state 8

    $default  reduce using rule 23 (declare_functions)

    local_variables    go to state 9
    simple_type        go to state 10
    complex_type       go to state 11
    declare_functions  go to state 12
    function_header    go to state 13
    declare_function_  go to state 14


state 3

    0 $accept: program $end .

    $default  accept


state 4

    8 simple_type: TOKEN_LOCATION .

    $default  reduce using rule 8 (simple_type)


state 5

    9 simple_type: TOKEN_OBJECT .

    $default  reduce using rule 9 (simple_type)


state 6

    6 simple_type: TOKEN_VAR_REAL .

    $default  reduce using rule 6 (simple_type)


state 7

    7 simple_type: TOKEN_VAR_INT .

    $default  reduce using rule 7 (simple_type)


state 8

   25 function_header: TOKEN_FUNCTION . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 15


state 9

    3 global_variables: global_variables local_variables .

    $default  reduce using rule 3 (global_variables)


state 10

    4 local_variables: simple_type . names TOKEN_SEMICOLON
   10 complex_type: simple_type . ranges
   12 ranges: . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   13       | . ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   14 names: . TOKEN_IDENTIFIER
   15      | . TOKEN_IDENTIFIER TOKEN_ASSIGN number
   16      | . names TOKEN_COMMA TOKEN_IDENTIFIER
   17      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   18      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_LSBRA       shift, and go to state 16
    TOKEN_IDENTIFIER  shift, and go to state 17

    ranges  go to state 18
    names   go to state 19


state 11

    5 local_variables: complex_type . names TOKEN_SEMICOLON
    6 simple_type: . TOKEN_VAR_REAL
    7            | . TOKEN_VAR_INT
    8            | . TOKEN_LOCATION
    9            | . TOKEN_OBJECT
   11 complex_type: complex_type . simple_type ranges
   14 names: . TOKEN_IDENTIFIER
   15      | . TOKEN_IDENTIFIER TOKEN_ASSIGN number
   16      | . names TOKEN_COMMA TOKEN_IDENTIFIER
   17      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   18      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_LOCATION    shift, and go to state 4
    TOKEN_OBJECT      shift, and go to state 5
    TOKEN_VAR_REAL    shift, and go to state 6
    TOKEN_VAR_INT     shift, and go to state 7
    TOKEN_IDENTIFIER  shift, and go to state 17

    simple_type  go to state 20
    names        go to state 21


state 12

    1 program: global_variables declare_functions . TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_MAIN  shift, and go to state 22


state 13

   26 declare_function_: function_header . TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   28                  | function_header . TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LPAR  shift, and go to state 23


state 14

   24 declare_functions: declare_function_ .  [TOKEN_MAIN]
   25 function_header: . TOKEN_FUNCTION TOKEN_IDENTIFIER
   27 declare_function_: declare_function_ . function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   29                  | declare_function_ . function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_FUNCTION  shift, and go to state 8

    $default  reduce using rule 24 (declare_functions)

    function_header  go to state 24


state 15

   25 function_header: TOKEN_FUNCTION TOKEN_IDENTIFIER .

    $default  reduce using rule 25 (function_header)


state 16

   12 ranges: TOKEN_LSBRA . TOKEN_UINT TOKEN_RSBRA

    TOKEN_UINT  shift, and go to state 25


state 17

   14 names: TOKEN_IDENTIFIER .  [TOKEN_SEMICOLON, TOKEN_COMMA, TOKEN_RPAR]
   15      | TOKEN_IDENTIFIER . TOKEN_ASSIGN number

    TOKEN_ASSIGN  shift, and go to state 26

    $default  reduce using rule 14 (names)


state 18

   10 complex_type: simple_type ranges .  [TOKEN_LOCATION, TOKEN_OBJECT, TOKEN_VAR_REAL, TOKEN_VAR_INT, TOKEN_IDENTIFIER]
   13 ranges: ranges . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 27

    $default  reduce using rule 10 (complex_type)


state 19

    4 local_variables: simple_type names . TOKEN_SEMICOLON
   16 names: names . TOKEN_COMMA TOKEN_IDENTIFIER
   17      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   18      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_SEMICOLON  shift, and go to state 28
    TOKEN_COMMA      shift, and go to state 29


state 20

   11 complex_type: complex_type simple_type . ranges
   12 ranges: . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   13       | . ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 16

    ranges  go to state 30


state 21

    5 local_variables: complex_type names . TOKEN_SEMICOLON
   16 names: names . TOKEN_COMMA TOKEN_IDENTIFIER
   17      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   18      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_SEMICOLON  shift, and go to state 31
    TOKEN_COMMA      shift, and go to state 29


state 22

    1 program: global_variables declare_functions TOKEN_MAIN . TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LPAR  shift, and go to state 32


state 23
